.debug/err_clean.txt



























































































































































































































error[E0432]: unresolved import `nl_llm_new::primitive::Message`
 --> crates\nl_llm_new\examples\gemini_cli_chat\main.rs:1:29
  |
1 | ...tive::{Message, Primitiv...
  |           ^^^^^^^
  |           |
  |           no `Message` in `primitive`
  |           help: a similar name exists in the module: `message`
  |
  = help: consider importing this variant instead:
          tokio::net::windows::named_pipe::PipeMode::Message


error[E0063]: missing fields `metadata` and `parameters` in initializer of `PrimitiveRequest`
  --> crates\nl_llm_new\examples\gemini_cli_chat\main.rs:61:19
   |
61 | ... = PrimitiveRequest {
   |       ^^^^^^^^^^^^^^^^ missing `metadata` and `parameters`


error[E0599]: the method `flush` exists for struct `std::io::Stdout`, but its trait bounds were not satisfied
  --> crates\nl_llm_new\examples\gemini_cli_chat\main.rs:81:51
   |
81 | ...dout().flush().await.un...
   |           ^^^^^ method cannot be called on `std::io::Stdout` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `std::io::Stdout: tokio::io::AsyncWrite`
           which is required by `std::io::Stdout: tokio::io::AsyncWriteExt`
   = help: items from traits can only be used if the trait is in scope
help: trait `Write` which provides `flush` is implemented but not in scope; perhaps you want to import it
   |
 1 + use std::io::Write;
   |


error[E0282]: type annotations needed
  --> crates\nl_llm_new\examples\gemini_cli_chat\main.rs:81:33
   |
81 | ...   std::io::stdout().flush().await.un...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type


Some errors have detailed explanations: E0063, E0282, E0432, E0599.

For more information about an error, try `rustc --explain E0063`.

